--- a/ZamTour/Info.plist
+++ b/ZamTour/Info.plist
@@ -2,28 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb116492335713396</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>116492335713396</string>
-    <key>FacebookDisplayName</key>
-    <string>ZamTour</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
-    
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb116492335713396</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>116492335713396</string>
+	<key>FacebookDisplayName</key>
+	<string>ZamTour</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -56,6 +54,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>¿Quieres proporcionar permisos para acceder a la galería?</string>
+	<key>NSCameraUsageDescription</key>
+	<string>¿Quieres proporcionar permisos para acceder a la cámara?</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
